<resources>
    <string name="app_name">LearningEasel</string>
    <string name="Name">Name</string>
    <string name="Next">Next</string>
    <string name="Email">Email</string>
    <string name="Register">Register</string>
    <string name="upload">Upload Image</string>
    <string name="capture">Capture Image</string>
    <string name="Mobile_number">Mobile Number</string>
    <string name="Password">Password</string>
    <string name="already_signed_in_login_here">Already signed in? Login here</string>
    <string name="Login">Login</string>
    <string name="New_user_create_account">New User? Create Account</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="menu_account">Users</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_home">Home</string>
    <string name="Go">Go on</string>
    <string name="menu_follower">Followers</string>
    <string name="menu_follow">Following</string>
    <string name="menu_post">Post</string>
    <string name="interest_prompt">Choose an Interest</string>
    <string name="default_notification_channel_id">alarm_channel_id_01</string>

    <string-array name="interests">
        <item>Science</item>
        <item>Medication</item>
        <item>Computers</item>
        <item>Business</item>
        <item>Environment</item>
        <item>Arts</item>
        <item>Sports</item>
        <item>Economics</item>
        <item>Architecture</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="zero">0:00</string>
    <string name="channel_name">Channel Name....</string>
    <string name="what_it_s_for">What it\'s for</string>
</resources>