<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="@drawable/background">


        <ImageView
            android:id="@+id/logo_login"
            android:layout_width="241dp"
            android:layout_height="148dp"
            android:layout_marginStart="85dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="85dp"
            android:contentDescription="@string/app_name"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />


        <TextView
            android:id="@+id/app_name_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo_login"
            android:layout_marginTop="16dp"
            android:duplicateParentState="false"
            android:fontFamily="@font/autour_one"
            android:lineSpacingExtra="8sp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/colorSecondary"
            android:textSize="38sp"

            android:textStyle="bold"
            android:typeface="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo_login" />

        <EditText
            android:id="@+id/email_login"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@id/app_name_login"
            android:layout_alignParentTop="false"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="53dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="53dp"
            android:background="@drawable/rounded_edit_text"
            android:drawableStart="@drawable/ic_action_user"
            android:ems="10"
            android:fontFamily="@font/arya"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            android:lineSpacingExtra="7sp"

            android:padding="5dp"
            android:textAlignment="viewStart"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_name_login"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/password_login"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@id/email_login"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="53dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="53dp"
            android:background="@drawable/rounded_edit_text"
            android:drawableStart="@drawable/ic_action_pass"
            android:ems="10"
            android:fontFamily="@font/arya"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:lineSpacingExtra="7sp"
            android:padding="5dp"
            android:textAlignment="viewStart"
            android:textColor="#000000"
            android:textSize="16sp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_login"
            tools:ignore="Autofill" />


        <Button
            android:id="@+id/login_login"
            android:layout_width="208dp"
            android:layout_height="60dp"
            android:layout_below="@id/password_login"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="109dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="109dp"
            android:background="@drawable/button_round"
            android:backgroundTint="@color/colorSecondary"
            android:fontFamily="sans-serif-black"
            android:text="@string/Login"
            android:textColor="@color/textDark"


            android:textSize="19sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_login" />

        <TextView
            android:id="@+id/create_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_login"
            android:layout_centerInParent="true"
            android:layout_marginTop="30dp"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="@string/New_user_create_account"
            android:textAlignment="center"
            android:textColor="@color/colorSecondary"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_login" />


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_login">

                <TextView
                    android:id="@+id/forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"


                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="15dp"

                    android:gravity="center|center_horizontal|center_vertical"
                    android:text="@string/forgot_password"
                    android:textAlignment="center"
                    android:textColor="@color/colorSecondary"
                    android:textSize="16sp"
                    android:textStyle="bold" />


        </LinearLayout>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/googlesignin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.803" />

        <ProgressBar
            android:id="@+id/progressBar_login"
            style="@style/MyProgressBarRectangle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="40dp"
            android:visibility="invisible"


            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:visibility="invisible" />



</androidx.constraintlayout.widget.ConstraintLayout>