<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="250dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.203"
        app:srcCompat="@drawable/ic_action_account" />

    <Button
        android:id="@+id/register_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="109dp"
        android:layout_marginEnd="109dp"
        android:background="@drawable/button_round"
        android:backgroundTint="@color/colorSecondary"
        android:fontFamily="sans-serif-black"
        android:paddingStart="30dp"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="30dp"
        android:paddingRight="10dp"

        android:paddingBottom="10dp"
        android:text="@string/Register"
        android:textColor="@color/textDark"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.83" />

    <Button
        android:id="@+id/upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="109dp"
        android:layout_marginEnd="109dp"
        android:background="@drawable/button_round"
        android:backgroundTint="@color/colorSecondary"
        android:fontFamily="sans-serif-black"
        android:paddingStart="30dp"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="30dp"
        android:paddingRight="10dp"

        android:paddingBottom="10dp"
        android:text="@string/upload"
        android:textColor="@color/textDark"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.702" />

    <Button
        android:id="@+id/capture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="109dp"
        android:layout_marginEnd="109dp"
        android:background="@drawable/button_round"
        android:backgroundTint="@color/colorSecondary"
        android:fontFamily="sans-serif-black"
        android:paddingStart="30dp"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="30dp"
        android:paddingRight="10dp"

        android:paddingBottom="10dp"
        android:text="@string/capture"
        android:textColor="@color/textDark"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.575" />

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:background="@drawable/button_round"
        android:backgroundTint="@color/colorSecondary"
        android:fontFamily="sans-serif-black"
        android:paddingStart="30dp"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="30dp"
        android:paddingRight="10dp"

        android:paddingBottom="10dp"
        android:text="@string/Go"
        android:textColor="@color/textDark"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.938" />


</androidx.constraintlayout.widget.ConstraintLayout>